--- a/wwwroot/css/maps.css
+++ b/wwwroot/css/maps.css
@@ -1,12 +1,18 @@
-﻿.ui-map-viewer {
+﻿/*.ui-map-viewer {
 	width: 100%;
 	height: 100%;
 }
-
-canvas {
+*/
+/*canvas {
 	display: block;
 	width: 100%;
-	height: calc(100%);
+	height: 100%;
+}
+*/
+
+.container-fluid{
+	padding: 0px;
+	margin: 0px;
 }
 
 .info {
@@ -23,7 +29,7 @@ canvas {
 	margin: 0 10px;
 }
 
-body{
+/*body{
 	width: 100%;
 	height: 100%;
 	padding-bottom: 0px;
@@ -34,14 +40,8 @@ body{
 	height: calc(100% - 57px);
 	padding: 0px;
 	margin: 0px;
-}
+}*/
 /* old */
-
-.map-canvas {
-	width: 100%;
-	z-index: 0;
-}
-
 .layerbutton {
 	display: none;
 	position: absolute;
@@ -93,9 +93,9 @@ body{
 	margin-right: auto;
 }
 
-	.hamburger .icon-bar + .icon-bar {
-		margin-top: 4px;
-	}
+.hamburger .icon-bar + .icon-bar {
+	margin-top: 4px;
+}
 
 .hamburger.closed {
 	left: 10px;
