--- a/wwwroot/css/modelviewer.css
+++ b/wwwroot/css/modelviewer.css
@@ -309,3 +309,23 @@ tr.selected{
     margin-bottom: 5px;
     margin-left: 5px;
 }
+
+.textureInput
+{
+  padding-left: 0.2em;
+}
+
+#textureForm label
+{
+  margin-left: 0.3em;
+}
+
+.textureInputDiv
+{
+  margin-bottom: 1px;
+}
+
+#textureFormSave
+{
+  margin-top: 1em;
+}
