--- a/wwwroot/css/dbc.css
+++ b/wwwroot/css/dbc.css
@@ -68,7 +68,7 @@
 	text-decoration: line-through;
 }
 
-thead input { width: calc(100% + 20px) }
+thead input { width: 100%; }
 /* Mobile Devices */
 @media screen and (max-width: 767px) {
 	#fileFilter, #buildFilter, #dbcform {
