--- a/wwwroot/css/maps.css
+++ b/wwwroot/css/maps.css
@@ -215,3 +215,11 @@
 	width: 50px;
 	text-align: center;
 }
+
+#js-notifs {
+    position: absolute;
+    top: 100px;
+    right: 10px;
+    z-index: 3;
+	width: 500px;
+}
