--- a/wwwroot/css/maps.css
+++ b/wwwroot/css/maps.css
@@ -105,7 +105,8 @@
 	top: 57px;
 	left: 0;
 	width: 300px;
-	height: 110px;
+	/* height: 110px; */
+	height: 50px;
 	border-bottom-right-radius: 6px;
 	padding-left: 20px;
 	padding-right: 20px;
@@ -152,7 +153,8 @@
 }
 
 .techdetails {
-	top: 170px;
+	/*top: 170px;*/
+	top: 120px;
 	left: 0px;
 	width: 250px;
 	height: 100px;
